@@ -1,3 +1,9 @@
+2006-04-12  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/dgCMatrix.R: add  storage.mode(.) <- "double" for "matrix"
+	arguments, such that M %*% 1:6 now works
+	* Tests/matprod.R: test the above
+
 2006-04-03  Douglas Bates  <bates@stat.wisc.edu>
 
 	* R/lmer.R (qqmath,ranef.lmer-method): added a qqmath method for
